--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <html>
-    <head>
+  <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+  </head>
+  <body>
+    <h1>Simple Interest Calculator</h1>
+    <div style="padding:30px" id="form">
+    <table>
+      <tr>
+        <td colspam="2">Amount</td>
+        <td><input type="number" id="principal"></td>
+      </tr>
+      <tr>
+        <td>Interest Rate</td>
+        <td><input type="range" name="rate" min="0.1" max="20" step="0.1" value="0.1" id="rate" oninput="showRate()" onchange="showRate()"></td>
+        <td><output id="ratevalue"/></td>
+      <tr>
+        <td clospam="2">No. of Years</td>
+        <td><input type="number" name="years" min="1" max="20" step="1" value="5" id="years"</td>
+      </tr>
+      <tr>
+        <td colspam="3"><input type="submit" value="Compute Interest" onclick="compute()"></td>
+      </tr>
+    </table>
+    </div>
+    <div style="padding:30px" id="result">
+    </div>
+    <div id="copyright"></div>
+    © Every Can Get Rich
+    </div>
     </body>
+    </body>
+  </body>
 </html>
