--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
   <head>
+    <title>Web App - Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Simple Interest Calculator</h1>
-    <div style="padding:30px" id="form">
+    <div class="p30" id="form">
     <table>
       <tr>
         <td colspam="2">Amount</td>
@@ -13,7 +14,7 @@
       </tr>
       <tr>
         <td>Interest Rate</td>
-        <td><input type="range" name="rate" min="0.1" max="20" step="0.1" value="0.1" id="rate" oninput="showRate()" onchange="showRate()"></td>
+        <td><input type="range" name="rate" min="1" max="20" step="0.1" value="0.1" id="rate" oninput="showRate()" onchange="showRate()"></td>
         <td><output id="ratevalue"/></td>
       <tr>
         <td clospam="2">No. of Years</td>
@@ -32,7 +33,7 @@
       </tr>
     </table>
     </div>
-    <div style="padding:30px" id="result">
+    <div class="p30" id="result">
     </div>
     <div id="copyright"></div>
     © Every Can Get Rich
