--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </td>
       </tr>
       <tr>
-        <td colspam="3"><input type="submit" value="Compute Interest" onclick="compute()"></td>
+        <td colspam="3"><input class="button" type="submit" value="Compute Interest" onclick="compute()"></td>
       </tr>
     </table>
     </div>
